[package]
name = "ripnode"
version = "1.0.0"
description = "Simple tool for deleting node_modules and other folders"
license = "MIT OR Apache-2.0"
authors = ["Jorge Mayoral Álvarez <mayoralalvarezj@gmail.com>"]
repository = "https://github.com/JorgeMayoral/ripnode"
readme = "README.md"
homepage = "https://github.com/JorgeMayoral/ripnode"
keywords = ["node_modules", "delete", "clean", "cli", "folder"]
categories = ["command-line-utilities"]
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "ripnode"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytesize = "1.2.0"
clap = { version = "4.1.11", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
crossterm = "0.26.1"
env_logger = "0.10.0"
fs_extra = "1.3.0"
log = "0.4.17"
tui = { package = "ratatui", version = "0.20.0" }

[profile.release]
strip = true
