[package]
name = "ripnode"
version = "1.1.7"
description = "Simple tool for deleting node_modules and other folders"
license = "MIT OR Apache-2.0"
authors = ["Jorge Mayoral Álvarez <mayoralalvarezj@gmail.com>"]
repository = "https://github.com/JorgeMayoral/ripnode"
readme = "README.md"
homepage = "https://github.com/JorgeMayoral/ripnode"
keywords = ["node_modules", "delete", "clean", "cli", "folder"]
categories = ["command-line-utilities"]
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "ripnode"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytesize = "1.2.0"
clap = { version = "4.3.19", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
crossterm = "0.26.1"
env_logger = "0.10.0"
fs_extra = "1.3.0"
log = "0.4.19"
tui = { package = "ratatui", version = "0.20.0" }

[profile.release]
strip = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
