[package]
name = "ripnode"
version = "1.1.10"
description = "Simple tool for deleting node_modules and other folders"
license = "MIT OR Apache-2.0"
authors = ["Jorge Mayoral Álvarez <mayoralalvarezj@gmail.com>"]
repository = "https://github.com/JorgeMayoral/ripnode"
readme = "README.md"
homepage = "https://github.com/JorgeMayoral/ripnode"
keywords = ["node_modules", "delete", "clean", "cli", "folder"]
categories = ["command-line-utilities"]
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "ripnode"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytesize = "1.3.0"
clap = { version = "4.4.12", features = ["derive"] }
clap-verbosity-flag = "2.1.1"
crossterm = "0.27.0"
env_logger = "0.10.1"
fs_extra = "1.3.0"
log = "0.4.20"
ratatui = "0.25.0"

[profile.release]
strip = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.6.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "upload"
